--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta refresh="0;https://донецк.com/">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta refresh="0;https://донецк.com/">
+</head>
+<body>
+	
+</body>
+</html>
