--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta refresh="0;https://донецк.com/">
-</head>
-<body>
-	
-</body>
-</html>
+<meta http-equiv="refresh" content="1;https://донецк.com/">
